fix: fix word auto wrap

--- a/src/components/news-display/index.module.scss
+++ b/src/components/news-display/index.module.scss
@@ -56,6 +56,7 @@
         //word-break: break-all;
         color: rgb(34, 34, 34);
         white-space: pre-line;
+        hyphens: auto;
         //letter-spacing: 0.3px;
     }
     .footer {
